styles/video.css
.vids-container{
    padding-top: 8px;
    padding-left: 10px;
    padding-right: 10px;
    background-color:rgb(247, 247, 247)
}
.gridder{
    display:grid;
    grid-template-columns: repeat(auto-fit, minmax(230px,1fr));
    column-gap: 5px;
    row-gap: 24px;
}
.thumbnail{
    width:100%;
    object-fit:cover;
    display: block;
    border-radius: 6px;
}
.video-preview{
    width:100%;
    cursor:pointer;
    border-radius: 9px;
    padding-bottom: 10px;
    transition: box-shadow 0.6s;
}
.video-preview:hover{
    box-shadow: 0 0 8px 1px rgba(96, 96, 96, 0.168);
}
.vid-title,.vid-creator,.vid-stats{
    margin-top: 0;
    margin-bottom: 0;
    margin-right: 3px;
    font-family: "Roboto", "Arial";
}
.vid-title{
    font-size: 14px;
    font-weight: 600;
    margin-bottom: 8px;
}
.vid-creator{
    font-size: 12px;
    color: rgb(96, 96, 96);
    margin-bottom: 3px;
}
.vid-creator-text{
    display: inline-block;
    transition: color 0.15s;
}
.vid-creator-text:hover{
    color: rgb(48, 36, 36);
    font-weight:415;
}
.vid-stats{
    font-size: 13px;
    color: rgb(96, 96, 96);
}
.channel-picture{
    margin-left: 7px;
}
.profile-pic-container{
    position: relative;
}
.video-info{
    display:inline-block;
    margin-left: 8px;
    margin-right: 8px;
}
.profile-pic{
    width: 40px;
    height:40px;
    object-fit: cover;
    border-radius: 20px;
}
.profile-pic-container:hover .profile-pic{
    border-width: 2px;
    border-color: rgb(136, 6, 6);
    border-style: solid;
    width: 36px;
    height:36px;


}
.thumbnail-row{
    margin: 8px;
    margin-top: 0px;
    margin-bottom: 10px;
    padding-top: 10px;
    position: relative;
}
.timestamp{
    background-color: rgba(0, 0, 0, 0.842);
    padding: 3px 5px;
    border-radius: 2px;
    position: absolute;
    color:white;
    font-size: 10px;
    bottom: 10px;
    right:10px;
}

.channel-picture-tooltip{
    position: absolute;
    background-color: white;
    padding:14px 13px;
    padding-right:30px;
    border-radius: 10px;
    display:none;
    grid-template-columns: 50px 1fr;
    column-gap: 12px;
    width:max-content;
    pointer-events: none;
    bottom: -82px;
    left: 5px;
}
.profile-pic-container:hover .channel-picture-tooltip{
    display: grid;
}
.tooltip-profile-pic{
    height:50px;
    width:50px;
    border-radius: 25px;
}
.tooltip-channel-name{
    margin-top: 0;
    margin-bottom: 0;
    font-family: "Roboto", "Arial";
    font-size: 16px;
    font-weight: 600;
    margin-top:3px;
    margin-bottom: 6px;
}
.tooltip-sub-count{
    margin-top: 0;
    margin-bottom: 0;
    margin-right: 3px;
    font-family: "Roboto", "Arial";
    font-size: 14px;
    color: rgb(96, 96, 96);
    
}

